src/components/NumericInputField/style.scss
@import '../../scss/variables/colors';

$base-class: 'numeric-input';

@mixin increment-border($color) {
  border-style: solid;
  border-width: 0 4px 4px 4px;
  border-color: transparent transparent $color transparent;
}

@mixin decrement-border($color) {
  border-style: solid;
  border-width: 4px 4px 0 4px;
  border-color: $color transparent transparent transparent;
}

.#{$base-class} {
  position: relative;
  display: inline-block;
  max-width: 64px;
  height: 36px;

  input {
    line-height: 42px;
    height: 100%;
    border-radius: 4px;
    border: 1px solid #bcc6d0;
    padding: 0 28px 0 4px;
    color: $font-secondary-color;
    text-align: right;
    max-width: 100%;
    box-sizing: border-box;

    &:hover {
      border-color: $field-hover-border-color;
      outline: 0;
    }

    &:focus {
      border-color: $primary-color;
      outline: 0;
    }

    &:disabled {
      color: $font-primary-color;
      opacity: 0.5;
      cursor: not-allowed;
    }
  }

  &__increment,
  &__decrement {
    position: absolute;
    top: 0;
    right: 0;
    height: 50%;
    width: 23px;
    border-left: 1px solid #bcc6d0;
    cursor: pointer;

    &::after {
      position: absolute;
      top: calc(50% - 2px);
      left: calc(50% - 4px);
      content: '';

      @include increment-border($font-secondary-color);
    }
  }

  &__increment {
    &:hover {
      &::after {
        @include increment-border($font-primary-color);
      }
    }

    &--disabled {
      cursor: not-allowed;

      &::after,
      &:hover::after {
        opacity: 0.5;

        @include increment-border($font-secondary-color);
      }
    }
  }

  &__decrement {
    top: auto;
    bottom: 0;
    border-top: 1px solid #bcc6d0;

    &::after {
      @include decrement-border($font-secondary-color);
    }

    &:hover {
      &::after {
        @include decrement-border($font-primary-color);
      }
    }

    &--disabled {
      cursor: not-allowed;

      &::after,
      &:hover::after {
        opacity: 0.5;

        @include decrement-border($font-secondary-color);
      }
    }
  }

  &--with-max {
    max-width: none;
  }

  &--disabled {
    cursor: not-allowed;
    color: $font-primary-color;
    opacity: 0.5;

    .#{$base-class}__increment {
      cursor: not-allowed;
      opacity: 0.5;

      &:hover::after {
        @include increment-border($font-secondary-color);
      }
    }

    .#{$base-class}__decrement {
      cursor: not-allowed;
      opacity: 0.5;

      &:hover::after {
        @include decrement-border($font-secondary-color);
      }
    }
  }

  &--error {
    input,
    input:focus {
      border-color: $error-color;
    }
  }
}

